--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             justify-content: center;
             height: 100vh;
             text-align: center;
+            transition: background 0.3s, color 0.3s;
         }
         .card {
             background: #fffaf0;
@@ -39,7 +40,7 @@
             color: #7b5e5e;
         }
         .button {
-            margin-top: 20px;
+            margin-top: 10px;
             padding: 10px 20px;
             background: #7b5e5e;
             color: white;
@@ -50,6 +51,22 @@
         .button:hover {
             background: #5e4545;
         }
+        .dark-mode {
+            background: #2b2b2b;
+            color: #f5f5f5;
+        }
+        .dark-mode .card {
+            background: #3c3c3c;
+        }
+        .search-container {
+            margin-top: 20px;
+        }
+        .search-input {
+            padding: 8px;
+            margin: 5px;
+            border: 1px solid #7b5e5e;
+            border-radius: 6px;
+        }
     </style>
 </head>
 <body>
@@ -57,13 +74,31 @@
         <div class="ayah-arabic" id="ayah-arabic">Loading...</div>
         <div class="ayah-english" id="ayah-english"></div>
         <div class="reference" id="reference"></div>
+        <div class="tafsir" id="tafsir"></div>
+
+        <div class="search-container">
+            <input type="number" id="surahInput" class="search-input" placeholder="Surah Number">
+            <input type="number" id="ayahInput" class="search-input" placeholder="Ayah Number">
+            <button class="button" onclick="searchAyah()">Search</button>
+        </div>
+
         <button class="button" onclick="fetchAyah()">Load Another Verse</button>
+        <button class="button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+        <button class="button" onclick="shareWhatsApp()">Share on WhatsApp</button>
+        <button class="button" onclick="generateQR()">Generate QR Code</button>
+        <div id="qrcode"></div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script>
-        async function fetchAyah() {
+        async function fetchAyah(surah = null, ayah = null) {
             try {
-                const response = await fetch('https://api.alquran.cloud/v1/ayah/random/editions/quran-uthmani,en.sahih');
+                let url = 'https://api.alquran.cloud/v1/ayah/random/editions/quran-uthmani,en.sahih';
+                if (surah && ayah) {
+                    url = `https://api.alquran.cloud/v1/ayah/${surah}:${ayah}/editions/quran-uthmani,en.sahih`;
+                }
+
+                const response = await fetch(url);
                 const data = await response.json();
                 const arabic = data.data[0].text;
                 const english = data.data[1].text;
@@ -73,17 +108,57 @@
                 document.getElementById('ayah-arabic').innerText = arabic;
                 document.getElementById('ayah-english').innerText = english;
                 document.getElementById('reference').innerText = `${surahName} (${ayahNumber})`;
+                document.getElementById('tafsir').innerText = "Tafsir unavailable for now.";
+
+                document.getElementById('qrcode').innerHTML = '';
 
             } catch (error) {
                 console.error('Failed to fetch ayah:', error);
                 document.getElementById('ayah-arabic').innerText = 'Error fetching verse.';
                 document.getElementById('ayah-english').innerText = '';
                 document.getElementById('reference').innerText = '';
+                document.getElementById('tafsir').innerText = '';
             }
         }
 
-        // Load first ayah on page load
+        function searchAyah() {
+            const surah = document.getElementById('surahInput').value;
+            const ayah = document.getElementById('ayahInput').value;
+            if (surah && ayah) {
+                fetchAyah(surah, ayah);
+            } else {
+                alert('Please enter both Surah and Ayah numbers.');
+            }
+        }
+
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+
+        function shareWhatsApp() {
+            const arabic = document.getElementById('ayah-arabic').innerText;
+            const english = document.getElementById('ayah-english').innerText;
+            const reference = document.getElementById('reference').innerText;
+            const message = `${arabic}\n${english}\n(${reference})`;
+            const whatsappUrl = `https://wa.me/?text=${encodeURIComponent(message)}`;
+            window.open(whatsappUrl, '_blank');
+        }
+
+        function generateQR() {
+            const arabic = document.getElementById('ayah-arabic').innerText;
+            const english = document.getElementById('ayah-english').innerText;
+            const reference = document.getElementById('reference').innerText;
+            const qrText = `${arabic}\n${english}\n(${reference})`;
+            document.getElementById('qrcode').innerHTML = '';
+            new QRCode(document.getElementById('qrcode'), {
+                text: qrText,
+                width: 128,
+                height: 128
+            });
+        }
+
         fetchAyah();
     </script>
 </body>
 </html>
+
