--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quran Quotes</title>
+    <title>Quran Quotes (Offline Mode)</title>
     <style>
         body {
             font-family: 'Georgia', serif;
@@ -91,72 +91,70 @@
             <button class="button" onclick="searchAyah()">Search</button>
         </div>
 
-        <button class="button" onclick="fetchAyah()">Load Another Verse</button>
+        <button class="button" onclick="loadRandomAyah()">Load Another Verse</button>
         <button class="button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
     </div>
 
     <script>
+        const ayahs = [
+            {arabic: 'بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ', english: 'In the name of Allah, the Entirely Merciful, the Especially Merciful.', reference: 'Al-Fatihah (1:1)'},
+            {arabic: 'اللَّهُ لَا إِلَٰهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ', english: 'Allah - there is no deity except Him, the Ever-Living, the Sustainer of existence.', reference: 'Al-Baqarah (2:255)'},
+            {arabic: 'وَقُلْ رَبِّ زِدْنِي عِلْمًا', english: 'And say, "My Lord, increase me in knowledge."', reference: 'Ta-Ha (20:114)'},
+            {arabic: 'إِنَّ مَعَ الْعُسْرِ يُسْرًا', english: 'Indeed, with hardship [will be] ease.', reference: 'Ash-Sharh (94:6)'},
+            {arabic: 'فَإِنَّ مَعَ الْعُسْرِ يُسْرًا', english: 'For indeed, with hardship [will be] ease.', reference: 'Ash-Sharh (94:5)'},
+            {arabic: 'إِنَّا أَعْطَيْنَاكَ الْكَوْثَرَ', english: 'Indeed, We have granted you, [O Muhammad], al-Kawthar.', reference: 'Al-Kawthar (108:1)'}
+        ];
+
         const surahList = [
             "Al-Fatihah", "Al-Baqarah", "Aal-E-Imran", "An-Nisa", "Al-Maidah", "Al-An'am", "Al-A'raf", "Al-Anfal", "At-Tawbah", "Yunus", "Hud", "Yusuf", "Ar-Ra'd", "Ibrahim", "Al-Hijr", "An-Nahl", "Al-Isra", "Al-Kahf", "Maryam", "Ta-Ha", "Al-Anbiya", "Al-Hajj", "Al-Muminun", "An-Nur", "Al-Furqan", "Ash-Shu'ara", "An-Naml", "Al-Qasas", "Al-Ankabut", "Ar-Rum", "Luqman", "As-Sajda", "Al-Ahzab", "Saba", "Fatir", "Ya-Sin", "As-Saffat", "Sad", "Az-Zumar", "Ghafir", "Fussilat", "Ash-Shura", "Az-Zukhruf", "Ad-Dukhan", "Al-Jathiya", "Al-Ahqaf", "Muhammad", "Al-Fath", "Al-Hujurat", "Qaf", "Adh-Dhariyat", "At-Tur", "An-Najm", "Al-Qamar", "Ar-Rahman", "Al-Waqia", "Al-Hadid", "Al-Mujadila", "Al-Hashr", "Al-Mumtahina", "As-Saff", "Al-Jumu'a", "Al-Munafiqun", "At-Taghabun", "At-Talaq", "At-Tahrim", "Al-Mulk", "Al-Qalam", "Al-Haqqa", "Al-Ma'arij", "Nuh", "Al-Jinn", "Al-Muzzammil", "Al-Muddaththir", "Al-Qiyama", "Al-Insan", "Al-Mursalat", "An-Naba", "An-Nazi'at", "Abasa", "At-Takwir", "Al-Infitar", "Al-Mutaffifin", "Al-Inshiqaq", "Al-Burooj", "At-Tariq", "Al-Ala", "Al-Ghashiya", "Al-Fajr", "Al-Balad", "Ash-Shams", "Al-Lail", "Ad-Duha", "Ash-Sharh", "At-Tin", "Al-Alaq", "Al-Qadr", "Al-Bayyina", "Az-Zalzalah", "Al-Adiyat", "Al-Qaria", "At-Takathur", "Al-Asr", "Al-Humazah", "Al-Fil", "Quraish", "Al-Ma'un", "Al-Kawthar", "Al-Kafirun", "An-Nasr", "Al-Masad", "Al-Ikhlas", "Al-Falaq", "An-Nas"
         ];
 
         surahList.forEach((name, index) => {
             const option = document.createElement('option');
-            option.value = index + 1;
+            option.value = name;
             option.textContent = name;
             document.getElementById('surahSelect').appendChild(option);
         });
 
-        async function fetchAyah(surah = null, ayah = null) {
+        function loadRandomAyah() {
             const card = document.getElementById('card');
             card.style.opacity = 0;
+            const randomIndex = Math.floor(Math.random() * ayahs.length);
+            const ayah = ayahs[randomIndex];
 
-            try {
-                let url = 'https://api.alquran.cloud/v1/ayah/random/editions/quran-uthmani,en.sahih';
-                if (surah && ayah) {
-                    url = `https://api.alquran.cloud/v1/ayah/${surah}:${ayah}/editions/quran-uthmani,en.sahih`;
-                }
+            document.getElementById('ayah-arabic').innerText = ayah.arabic;
+            document.getElementById('ayah-english').innerText = ayah.english;
+            document.getElementById('reference').innerText = ayah.reference;
 
-                const response = await fetch(url);
-                const data = await response.json();
-
-                if(data.data) {
-                    const arabic = data.data[0].text;
-                    const english = data.data[1].text;
-                    const surahName = data.data[0].surah.englishName;
-                    const ayahNumber = data.data[0].numberInSurah;
-
-                    document.getElementById('ayah-arabic').innerText = arabic;
-                    document.getElementById('ayah-english').innerText = english;
-                    document.getElementById('reference').innerText = `${surahName} (${ayahNumber})`;
-                } else {
-                    document.getElementById('ayah-arabic').innerText = 'Error fetching verse.';
-                    document.getElementById('ayah-english').innerText = '';
-                    document.getElementById('reference').innerText = '';
-                }
-
-                card.style.opacity = 1;
-
-            } catch (error) {
-                console.error('Failed to fetch ayah:', error);
-            }
+            card.style.opacity = 1;
         }
 
         function searchAyah() {
             const surah = document.getElementById('surahSelect').value;
-            const ayah = document.getElementById('ayahInput').value;
-            if (surah && ayah) {
-                fetchAyah(surah, ayah);
+            const ayahInput = document.getElementById('ayahInput').value;
+            const foundAyah = ayahs.find(a => a.reference.includes(surah) && a.reference.includes(`(${ayahInput})`));
+
+            const card = document.getElementById('card');
+            card.style.opacity = 0;
+
+            if(foundAyah) {
+                document.getElementById('ayah-arabic').innerText = foundAyah.arabic;
+                document.getElementById('ayah-english').innerText = foundAyah.english;
+                document.getElementById('reference').innerText = foundAyah.reference;
             } else {
-                alert('Please select a Surah and enter Ayah number.');
+                document.getElementById('ayah-arabic').innerText = 'Ayah not found in offline data.';
+                document.getElementById('ayah-english').innerText = '';
+                document.getElementById('reference').innerText = '';
             }
+
+            card.style.opacity = 1;
         }
 
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
 
-        fetchAyah();
+        loadRandomAyah();
     </script>
 </body>
 </html>
