--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Quran Explorer</title>
 <style>
     body {
-        font-family: 'Georgia', serif;
+        font-family: 'Times New Roman';
         background: #f5f0e1;
         color: #4b2e2e;
         text-align: center;
